Issue #1602133: 'environ' is not really available with shared libraries on OSX

There already was a workaround for this for framework builds on OSX,
this changeset enables the same workaround for shared libraries.

Closes #1602133